--- a/src/resources/styles/slogan.css
+++ b/src/resources/styles/slogan.css
@@ -1,4 +1,4 @@
-@media (min-width:768px) {
+@media (min-width:924px) {
   .slogan-container {
     height: 320px;
   }
@@ -9,7 +9,7 @@
   }
 }
 
-@media (max-width:767px) {
+@media (max-width:923px) {
   .slogan-container {
     height: 300px;
   }
